Salesforce_integration/objects/Cardtapp_App_Event__c.object
<CustomObject>
    <fields>
        <fullName>Cardtapp_Tapper__c</fullName>
        <label>Cardtapp Tapper</label>
        <referenceTo>Cardtapp_Tapper__c</referenceTo>
        <relationshipLabel>Cardtapp App Events</relationshipLabel>
        <relationshipName>Cardtapp_App_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_email__c</fullName>
        <label>Member email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_external_ID__c</fullName>
        <label>Member external ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_name__c</fullName>
        <label>Member name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapp_Action_Data__c</fullName>
        <label>Tapp Action Data</label>
        <length>65535</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tapp_Action__c</fullName>
        <label>Tapp Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapp_Type__c</fullName>
        <label>Tapp Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_External_Id__c</fullName>
        <label>Tapper External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_First_name__c</fullName>
        <label>Tapper First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_Last_Name__c</fullName>
        <label>Tapper Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_Name__c</fullName>
        <label>Tapper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_email__c</fullName>
        <label>Tapper email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tapper_phone_number__c</fullName>
        <label>Tapper phone number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cardtapp App Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAE-{00000}</displayFormat>
        <label>App Event Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cardtapp App Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>